@@ -33,7 +33,6 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -85,6 +84,7 @@ import jolie.runtime.Value;
 import jolie.runtime.ValueVector;
 import jolie.runtime.embedding.RequestResponse;
 import jolie.runtime.typing.Type;
+import jolie.util.UriUtils;
 
 /**
  *
@@ -141,7 +141,7 @@ public class FileService extends JavaService {
 			if( Files.exists( Paths.get( url ) ) ) {
 				fileTypeMap = new MimetypesFileTypeMap( url );
 			} else {
-				try( InputStream mimeIS = new URL( url ).openStream() ) {
+				try( InputStream mimeIS = URI.create( url ).toURL().openStream() ) {
 					fileTypeMap = new MimetypesFileTypeMap( mimeIS );
 				}
 			}
@@ -507,7 +507,7 @@ public class FileService extends JavaService {
 		throws FaultException {
 		String dir = null;
 		try {
-			dir = interpreter().programDirectory().getCanonicalPath();
+			dir = UriUtils.normalizeWindowsPath( interpreter().programDirectory().getCanonicalPath() );
 		} catch( IOException e ) {
 			throw new FaultException( "IOException", e );
 		}
@@ -902,8 +902,8 @@ public class FileService extends JavaService {
 			parent = Paths.get( fileName ).getParent();
 		} catch( InvalidPathException e ) {
 			try {
-				parent = Paths.get( new URL( fileName ).toURI() ).getParent();
-			} catch( InvalidPathException | URISyntaxException | MalformedURLException invalidPathException ) {
+				parent = Paths.get( URI.create( fileName ) ).getParent();
+			} catch( IllegalArgumentException invalidPathException ) {
 				throw new FaultException( invalidPathException );
 			}
 		}
